fix: fixes bug with menu z-index

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -40,7 +40,7 @@
     list-style: none;
     margin: 0;
     padding-left: 0;
-    z-index: 10;
+    z-index: 100000;
   }
 
   li {
